--- a/CSS/proposalstyle.css
+++ b/CSS/proposalstyle.css
@@ -177,10 +177,10 @@ canvas {
 @media(max-width:768px){
 .pg1 .page1 h1{
 margin-top: 50%;
-font-size: 18px;  
+font-size: 24px;  
 }
 .page1 p{
-    font-size: 14px;
+    font-size: 18px;
 }
 .playbtn{
     width: 30%;
@@ -188,15 +188,16 @@ font-size: 18px;
     margin-top: 5%;
 }
 .page2{
-    width: 100%;
+    width: 80%;
     height: auto;
     padding: 5%;
+    margin:auto;
 }
 .page2 h1{
-    font-size: 14px;
+    font-size: 18px;
 }
 .page2 p{
-    font-size: 10px;
+    font-size: 16px;
 }
 .responsebtn{
     width:30%;
