--- a/CSS/proposalstyle.css
+++ b/CSS/proposalstyle.css
@@ -8,7 +8,6 @@
 
 }
 html body{
-    font-family:montserrat;
     font-family: "poppins", sans-serif;
     background-attachment: fixed;
     background-image:url(../Images/roses1.png);
@@ -75,7 +74,7 @@ body::-webkit-scrollbar {
     animation: fadeIn 2s ease-in-out;
 }
 .page1 p{
-     font-family: "Redressed", cursive;
+    font-weight:bold;
     animation: fadeIn 2s ease-in-out;
 }
 .playbtn{
@@ -198,7 +197,7 @@ font-size: 22px;
 }
 .page2 p{
     font-size: 16px;
-     font-family: "Redressed", cursive;
+     font-weight:bold;
 }
 .responsebtn{
     width:30%;
@@ -226,5 +225,5 @@ font-size: 22px;
     font-family: "Sacramento", cursive;
 }
 .text p{
-     font-family: "Redressed", cursive;
+     font-weight:bold;
 }
